--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,5 @@ build/
 Thumbs.db
 
 # Keep all generated files
-!input_transcripts/
-!interview_recordings/
-!audio_transcription/
-!copilot_output/ 
+!Synthetic_Interactions/
+!Interaction_Analysis/ 
